--- a/notebooks/01-perceptron/01_perceptron_keras.ipynb
+++ b/notebooks/01-perceptron/01_perceptron_keras.ipynb
@@ -4,6 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Part 0 - Explaining the perceptron\n",
+    "\n",
+    "### McCulloch and Pitts model\n",
+    "\n",
+    "In order to formalize how the \n",
+    "\n",
+    "<img src=\"files/mcculloch_pitts.png\" width=\"300\" height=\"300\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Part 1 \n",
     "## Building the perceptron (no Keras)"
    ]
@@ -676,7 +689,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
